Fixed navigation on mobile

--- a/css/rmp2.css
+++ b/css/rmp2.css
@@ -1663,6 +1663,7 @@ div.owl-carousel.owl-theme .single_wcp_testimonial img {
 
   .navbar-custom {
     padding: 20px !important;
+    position: fixed;
   }
 
   #headerwrap h1.header-secondary {
