--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -17,6 +17,7 @@
 
     .navbar-custom {
         padding: 20px !important;
+        position: fixed;
     }
 
     #headerwrap h1.header-secondary {
